display main characters.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
+    <div id="top-bar" >
+        <img 
+            src="assets/images/rickandmorty.jpeg"
+            alt="rickandmorty"
+        />
+
+        <h2>Rick And Morty</h2>
+    </div>
+
+    <div id="selection">
+        <button>Characters</button>
+        <button>Locations</button>
+        <button>Episodes</button>
+    </div>
+
+    <div class="display-characters">
+        <!-- Display the five main characters from the json file -->
+    </div>
     
     <script src="src/index.js"></script>
 </body>
