Display a seleted character.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div class="display-characters">
         <!-- Display the five main characters from the json file -->
     </div>
+
+    <div id="selected-character">
+
+    </div>
     
     <script src="src/index.js"></script>
 </body>
