Display all characters and recycle display one character code.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <div id="selection">
-        <button>Characters</button>
-        <button>Locations</button>
-        <button>Episodes</button>
+        <button id="characters">Characters</button>
+        <button id="locations">Locations</button>
+        <button id="episodes">Episodes</button>
     </div>
 
     <div class="display-characters">
