creating the liked and disliked functions and displaying them.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <button id="characters">Characters</button>
         <button id="locations">Locations</button>
         <button id="episodes">Episodes</button>
+        <button id="like">Favorites</button>
+        <button id="dislike">Hated</button>
     </div>
 
     <div class="display-characters">
