Implementing the filter function

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
 
     <div id="selection">
+        <button id="filter">Filter</button>
         <button id="characters">Characters</button>
         <button id="locations">Locations</button>
         <button id="episodes">Episodes</button>
